# ai-chatgpt-prompts

./: .env.example  .gitignore  README.md  pyproject.toml
src/ai_chatgpt_prompt/: __init__.py
