[tool.poetry]
name = "ai-chatgpt-prompt"
version = "0.1.0"
description = "a"
authors = ["lvidal1 <lvidal910@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ai_chatgpt_prompt"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
